--- a/styles/05-pages/_pricing.scss
+++ b/styles/05-pages/_pricing.scss
@@ -19,6 +19,7 @@
     .selection {
       color: $color-shipgray;
     }
+
     span {
       color: $color-coral;
     }
@@ -72,14 +73,14 @@
 
 @media (min-width: 320px) {
   .pricing {
-    padding: 0 20px;
-
     &__heading {
+      padding: 6px 20px 0 20px;
       text-align: center;
 
       &__header {
         padding-bottom: 9px;
       }
+
       &__text {
         padding-bottom: 19px;
       }
@@ -88,18 +89,21 @@
     &__background {
       width: 100%;
       height: 240px;
+      margin: 0 20px;
     }
 
     &__plans {
+      width: 100%;
+
       header h2 {
-        padding: 28px 0 11px 0;
+        padding: 28px 0 5px 0;
         text-align: center;
       }
 
       &__form {
         padding: 11px 0;
-        margin: 8px 5px 15px 5px;
         text-align: center;
+        margin: 15px 5px;
 
         form {
           display: flex;
@@ -116,11 +120,28 @@
             align-items: center;
             width: 100%;
             height: 100%;
-            padding: 6px 0;
+            padding: 2px 0;
+
+            .checkbox-item {
+              input,
+              label {
+                display: flex;
+                flex-direction: column;
+              }
+
+              label {
+                padding-top: 8px;
+              }
+
+              label:before {
+                margin: 0 auto;
+              }
+            }
 
             .text {
               display: flex;
               flex-direction: column;
+              padding-top: 5px;
 
               .selection {
                 padding: 12px 0 4px 0;
@@ -180,48 +201,59 @@
     &__background {
       width: 100%;
       height: 260px;
-      margin-top: 16px;
+      margin: 16px 6px 0 6px;
     }
 
     &__plans {
       header h2 {
-        padding: 35px 140px 16px 140px;
+        padding: 35px 120px 16px 120px;
         text-align: center;
       }
 
       &__form {
-        margin: 0 102px 17px 102px;
-        padding: 9px 0;
+        margin: 0 87px 17px 87px;
+        padding: 0;
 
         form {
           align-items: center;
 
           .left,
           .right {
-            flex-direction: row;
+            flex-direction: column;
             justify-content: flex-start;
-            padding: 6px 0 6px 24px;
+            padding: 0;
+            margin-left: -25px;
+            margin: 2px 0;
+
+            .checkbox-item {
+              input,
+              label {
+                flex-direction: row;
+                padding: 0;
+              }
+            }
 
             .text {
-              .selection {
-                padding: 0 0 6px 16px;
-              }
-
-              span {
-                padding-left: 16px;
-                text-align: left;
-              }
+              margin-left: -10px;
+              text-align: left;
             }
           }
 
+          // border
           .left::after {
             content: "";
             position: absolute;
-            top: 0;
+            top: 12px;
             left: 50%;
             background-color: $color-bonjour;
             width: 1px;
             height: 46px;
+          }
+
+          .right {
+            label {
+              margin-top: 22px;
+            }
           }
         }
       }
@@ -264,7 +296,6 @@
 
       &__form {
         margin: 0 25% 60px 25%;
-        padding: 14px 0 17px 0;
 
         form {
           .left,
@@ -272,6 +303,7 @@
             padding: 4px 0 4px 24px;
 
             .text {
+              margin-left: -26px;
               .selection {
                 padding: 0 0 0 16px;
               }
@@ -279,7 +311,14 @@
           }
 
           .left::after {
+            top: 12px;
             height: 60px;
+          }
+
+          .right {
+            label {
+              margin-top: 20px;
+            }
           }
         }
       }
